# clairvoyant

./: .editorconfig  .gitignore  README.md  clairvoyant.doap  com.cassidyjames.clairvoyant.Devel.json  com.cassidyjames.clairvoyant.json  com.github.cassidyjames.clairvoyant.json  com.github.cassidyjames.clairvoyant.yml  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml
.github/workflows/: ci.yml  flatpak.yml  gettext.yml  lint.yml
data/: Application.css  appdata.xml  com.github.cassidyjames.clairvoyant.appdata.xml.in  gresource.xml  gschema.xml  launcher.desktop  launcher.desktop.in  meson.build  metainfo.appdata.xml.in  style.css
data/styles/: dark.css  light.css  style.css
debian/: changelog  control  copyright  rules
meson/: post_install.py
po/: POTFILES.in  README.md  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  com.github.cassidyjames.clairvoyant.pot  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+161 more)
src/: Application.vala  Config.vala.in  Content.vala  FortuneLabel.vala  MainWindow.vala
